--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
     ],
     "Lua.diagnostics.disable": [
         "undefined-global",
-        "redundant-parameter"
+        "redundant-parameter",
+        "missing-parameter",
+        "param-type-mismatch"
     ]
 }
