--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "undefined-global",
         "redundant-parameter",
         "missing-parameter",
-        "param-type-mismatch"
+        "param-type-mismatch",
+        "inject-field"
     ]
 }
