--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,20 @@
         "missing-parameter",
         "param-type-mismatch",
         "inject-field"
+    ],
+    "Lua.runtime.version": "Lua 5.1",
+    "Lua.runtime.builtin": {
+        "basic": "disable",
+        "debug": "disable",
+        "io": "disable",
+        "math": "disable",
+        "os": "disable",
+        "package": "disable",
+        "string": "disable",
+        "table": "disable",
+        "utf8": "disable"
+    },
+    "Lua.workspace.library": [
+        "c:\\Users\\husan\\.vscode\\extensions\\ketho.wow-api-0.15.5\\Annotations"
     ]
 }
