--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,6 @@
         "utf8": "disable"
     },
     "Lua.workspace.library": [
-        "c:\\Users\\husan\\.vscode\\extensions\\ketho.wow-api-0.15.5\\Annotations"
+        "$USERPROFILE\\.vscode\\extensions\\ketho.wow-api-0.15.8\\Annotations"
     ]
 }
